# 0.10.01 (26536) 12-03-2008
Testing build process
# 0.10.00 (26391) 11-20-2008
Testing that deploy to prod also deploys to dev.
# 0.09.00 (26381) 11-20-2008
Testing deployment to tigercat.
# 0.08.13 (26379) 11-20-2008
Testing again.
# 0.08.12 (26376) 11-20-2008
Test message.
# 0.08.10 (26373) 11-20-2008
Test of the new builder gui.
# 0.08.09 (26333) 11-19-2008
testing new build process again
# 0.08.08 (26332) 11-19-2008
Testing new build and deploy 3rd time.
# 0.08.07 (26331) 11-19-2008
testing new build process
# 0.08.06 (26330) 11-19-2008
testing new build process
# 0.08.04 (26308) 11-19-2008
Test revised header template.
# 0.08.03 (26306) 11-19-2008
Test header generation 2.
Test message for header.
# 0.08.02 (26303) 11-19-2008
test deploy process
10/8/08 - use PhetApplicationConfig.launchSim
10/8/08 - changes log file created